pas/l502api.pas


  // Установка размера буфера в драйвере для синхронного ввода или вывода.
  function L502_SetDmaBufSize(hnd: t_l502_hnd;  dma_ch, size: LongWord): LongInt; stdcall;
  // Установка шага прерывания при передаче потока по DMA.
  function L502_SetDmaIrqStep(hnd: t_l502_hnd; dma_ch, step: LongWord): LongInt; stdcall;
  
  {------------ Функции для работы с сигнальным процессором -------------------}
  function L502_BfCheckFirmwareIsLoaded(hnd: t_l502_hnd; out version: LongWord): LongInt; stdcall;
  /// Загрузка прошивки сигнального процессора BlackFin.
  function L502_BfLoadFirmware(hnd: t_l502_hnd; filename: string): LongInt; stdcall;
  /// Чтение блока данных из памяти сигнального процессора.
  function L502_BfMemRead(hnd: t_l502_hnd; addr : LongWord; out regs: array of LongWord;
                                size: LongWord): LongInt; stdcall;
  /// Запись блока данных в память сигнального процессора.
  function L502_BfMemWrite(hnd: t_l502_hnd; addr : LongWord;
                           const regs: array of LongWord; size: LongWord): LongInt; stdcall;
  /// Передача управляющей команды сигнальному процессору.
  function L502_BfExecCmd(hnd: t_l502_hnd; cmd_code : Word; par : LongWord;
                const snd_data : array of LongWord; snd_size : LongWord;
                out rcv_data : array of LongWord; rcv_size : LongWord;
                tout: LongWord; out recvd_size: LongWord): LongInt; stdcall;

  {-------------------  Функции для работы с Flash-памятью модуля -------------}
  /// Чтение блока данных из Flash-памяти модуля.
  function L502_FlashRead(hnd: t_l502_hnd; addr: LongWord;
                          out data: array of Byte; size: LongWord): LongInt; stdcall;
  ///Запись блока данных во Flash-память модуля.
  function L502_FlashWrite(hnd: t_l502_hnd; addr: LongWord;
                           const data: array of Byte; size: LongWord): LongInt; stdcall;
  /// Стирание блока во Flash-памяти.
  function L502_FlashErase(hnd: t_l502_hnd; addr: LongWord; size: LongWord): LongInt; stdcall;
  /// Разрешение записи в пользовательскую область Flash-памяти.
  function L502_FlashWriteEnable(hnd: LongWord): LongInt; stdcall;
  /// Запрет записи в пользовательскую область Flash-памяти.
  function L502_FlashWriteDisable(hnd: t_l502_hnd): LongInt; stdcall;

  {-----------------  Дополнительные вспомогательные функции ------------------}
  //Получить версию библиотеки.
  function L502_GetDllVersion() : LongWord; stdcall;
  // Получить версию драйвера устройства
  function L502_GetDriverVersion(hnd: t_l502_hnd; out ver: LongWord): LongInt; stdcall;
  // Получение строки об ошибке
  function L502_GetErrorString(err: LongInt) : string; stdcall;
  // Моргание светодиодом на передней панели.
  function L502_LedBlink(hnd: t_l502_hnd): LongInt; stdcall;
  // Установка подтягивающих резисторов на входных линиях.
  function L502_SetDigInPullup(hnd: t_l502_hnd; pullups : LongWord): LongInt; stdcall;









implementation
  function L502_Create() : t_l502_hnd; stdcall; external 'l502api.dll';
  function L502_Free(hnd: t_l502_hnd) : LongInt; stdcall; external 'l502api.dll';
  function _get_serials( ser_arr: p_x502_serial_array; size:LongWord;
                         flags:LongWord; out devcnt: LongWord) : LongInt;
                         stdcall; external 'l502api.dll' name 'L502_GetSerialList';
  function _get_dev_records_list(out list; size:LongWord;
                          flags : LongWord;  out devcnt: LongWord) : LongInt;
                          stdcall; external 'l502api.dll' name 'L502_GetDevRecordsList';

  function _open(hnd: t_l502_hnd; serial: PAnsiChar) : LongInt; stdcall; external 'l502api.dll' name 'L502_Open';
  function L502_Close(hnd : t_l502_hnd) : LongInt; stdcall; external 'l502api.dll';
  function L502_GetDevInfo(hnd : t_l502_hnd; out info : t_l502_info) : LongInt; stdcall; external 'l502api.dll';

  function L502_Configure(hnd: t_l502_hnd; flags: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_SetLChannel(hnd: t_l502_hnd; lch, phy_ch, mode, range, avg: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_SetLChannelCount(hnd: t_l502_hnd; lch_cnt : LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_GetLChannelCount(hnd: t_l502_hnd; out lch_cnt: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_SetAdcFreqDivider(hnd: t_l502_hnd; adc_freq_div : LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_SetAdcInterframeDelay(hnd: t_l502_hnd; delay : LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_SetDinFreqDivider(hnd: t_l502_hnd; din_freq_div: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_SetAdcFreq(hnd: t_l502_hnd; var f_acq, f_frame: Double): LongInt; stdcall; external 'l502api.dll';
  function L502_SetDinFreq(hnd: t_l502_hnd; var f_din: Double): LongInt; stdcall; external 'l502api.dll';
  function L502_GetAdcFreq(hnd: t_l502_hnd; out f_acq, f_frame: Double): LongInt; stdcall; external 'l502api.dll';
  function L502_SetRefFreq(hnd: t_l502_hnd; freq: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_SetSyncMode(hnd: t_l502_hnd; sync_mode: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_SetSyncStartMode(hnd: t_l502_hnd; sync_start_mode: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_SetMode(hnd: t_l502_hnd; mode: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_GetMode(hnd: t_l502_hnd; out mode: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_SetAdcCoef(hnd: t_l502_hnd; range: LongWord; k, offs: Double): LongInt; stdcall; external 'l502api.dll';
  function L502_GetAdcCoef(hnd: t_l502_hnd; range: LongWord; out k, offs: Double): LongInt; stdcall; external 'l502api.dll';

  function L502_AsyncOutDac(hnd: t_l502_hnd; ch: LongWord; data: Double; flags: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_AsyncOutDig(hnd: t_l502_hnd; val, msk: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_AsyncInDig(hnd: t_l502_hnd; out din: LongWord): LongInt; stdcall; external 'l502api.dll';
  function _get_adc_frame(hnd: t_l502_hnd; flags: LongWord; tout: LongWord; out data): LongInt; stdcall; external 'l502api.dll' name 'L502_AsyncGetAdcFrame';

  function L502_StreamsEnable(hnd: t_l502_hnd; streams: LongWord): LongInt; stdcall;  external 'l502api.dll';
  function L502_StreamsDisable(hnd: t_l502_hnd; streams: LongWord): LongInt; stdcall;  external 'l502api.dll';
  function L502_StreamsStart(hnd: t_l502_hnd): LongInt; stdcall;  external 'l502api.dll';
  function L502_IsRunning(hnd: t_l502_hnd): LongInt; stdcall; external 'l502api.dll';
  function L502_StreamsStop(hnd: t_l502_hnd): LongInt; stdcall;  external 'l502api.dll';
  function _recv(hnd: t_l502_hnd; out buf; size: LongWord; tout : LongWord): LongInt; stdcall;  external 'l502api.dll' name 'L502_Recv';
  function _send(hnd: t_l502_hnd; const buf; size: LongWord; tout : LongWord): LongInt; stdcall;  external 'l502api.dll' name 'L502_Send';
  function _process_adc_data(hnd: t_l502_hnd; const src; out dest; var size : LongWord;
                               flags : LongWord): LongInt; stdcall;  external 'l502api.dll' name 'L502_ProcessAdcData';
  function _process_data(hnd: t_l502_hnd; const src; size: LongWord;
                     flags : LongWord; out adc_data; var adc_data_size : LongWord;
                     out din_data; var din_data_size: LongWord):LongInt; stdcall;  external 'l502api.dll' name 'L502_ProcessData';

  function _process_data_usr(hnd: t_l502_hnd; const src; size: LongWord;
                     flags : LongWord; out adc_data; var adc_data_size : LongWord;
                     out din_data; var din_data_size: LongWord;
                     out usr_data; var usr_data_size: LongWord):LongInt; stdcall;  external 'l502api.dll' name 'L502_ProcessDataWithUserExt';
  function _prepare_data(hnd: t_l502_hnd; const dac1, dac2; const digout; size, flags : LongWord;
                            out out_buf):LongInt; stdcall;  external 'l502api.dll' name 'L502_PrepareData';
  function L502_GetRecvReadyCount(hnd: t_l502_hnd; out rdy_cnt: LongWord):LongInt; stdcall; external 'l502api.dll';
  function L502_GetSendReadyCount(hnd: t_l502_hnd; out rdy_cnt: LongWord):LongInt; stdcall; external 'l502api.dll';
  function L502_GetNextExpectedLchNum(hnd: t_l502_hnd; out lch: LongWord):LongInt; stdcall; external 'l502api.dll';
  function L502_PreloadStart(hnd: t_l502_hnd): LongInt; stdcall; external 'l502api.dll';
  function L502_OutCycleLoadStart(hnd: t_l502_hnd; size: LongWord):LongInt; stdcall; external 'l502api.dll';
  function L502_OutCycleSetup(hnd: t_l502_hnd; flags: LongWord):LongInt; stdcall; external 'l502api.dll';
  function L502_OutCycleStop(hnd: t_l502_hnd; flags: LongWord):LongInt; stdcall; external 'l502api.dll';
  function L502_SetDmaBufSize(hnd: t_l502_hnd;  dma_ch, size: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_SetDmaIrqStep(hnd: t_l502_hnd; dma_ch, step: LongWord): LongInt; stdcall; external 'l502api.dll';

  function L502_BfCheckFirmwareIsLoaded(hnd: t_l502_hnd; out version: LongWord): LongInt; stdcall; external 'l502api.dll';
  function _bf_load_firm(hnd: t_l502_hnd; filename: PAnsiChar): LongInt; stdcall; external 'l502api.dll' name 'L502_BfLoadFirmware';
  function _bf_mem_read(hnd: t_l502_hnd; addr : LongWord; out regs; size: LongWord): LongInt; stdcall; external 'l502api.dll' name 'L502_BfMemRead';
  function _bf_mem_write(hnd: t_l502_hnd; addr : LongWord; const regs; size: LongWord): LongInt; stdcall; external 'l502api.dll' name 'L502_BfMemWrite';
  function _bf_exec_cmd(hnd: t_l502_hnd; cmd_code : Word; par : LongWord;
                const snd_data; snd_size : LongWord; out rcv_data; rcv_size : LongWord;
                tout: LongWord; out recved_size: LongWord): LongInt; stdcall; external 'l502api.dll' name 'L502_BfExecCmd';

  function _flash_read(hnd: t_l502_hnd; addr: LongWord; out data; size: LongWord): LongInt; stdcall; external 'l502api.dll' name 'L502_FlashRead';
  function _flash_write(hnd: t_l502_hnd; addr: LongWord; const data; size: LongWord): LongInt; stdcall; external 'l502api.dll' name 'L502_FlashWrite';
  function L502_FlashErase(hnd: t_l502_hnd; addr: LongWord; size: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_FlashWriteEnable(hnd: LongWord): LongInt; stdcall; external 'l502api.dll';
  function L502_FlashWriteDisable(hnd: t_l502_hnd): LongInt; stdcall; external 'l502api.dll';

  function L502_GetDllVersion() : LongWord; stdcall; external 'l502api.dll';
  function L502_GetDriverVersion(hnd: t_l502_hnd; out ver: LongWord): LongInt; stdcall; external 'l502api.dll';
  function _get_err_str(err : LongInt) : PAnsiChar; stdcall; external 'l502api.dll' name 'L502_GetErrorString';
  function L502_LedBlink(hnd: t_l502_hnd): LongInt; stdcall;  external 'l502api.dll';
  function L502_SetDigInPullup(hnd: t_l502_hnd; pullups : LongWord): LongInt; stdcall;  external 'l502api.dll';

